--- a/index.html
+++ b/index.html
@@ -1,156 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-
   <title>Frontend Mentor | Clipboard landing page</title>
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
 
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
+
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 
+
 <body>
-  <header>
-    <div class="container">
-      <img src="images/logo.svg" alt="logo">
-      <h1>A history of everything you copy</h1>
-      <p>Clipboard allows you to track and organize everything you
-        copy. Instantly <br>access your clipboard on all your devices.</p>
-      <div class="buttons">
-        <button class="down down-ios">Download for iOS</button>
-        <button class="down down-mac"> Download for Mac</button>
+<div class="picture">
+  <picture>
+    <source media="(min-width:768px)" srcset="images/bg-header-desktop.png">
+    <img src="images/bg-header-mobile.png" alt="">
+  </picture>
+</div>
+<section class="header">
+<article>
+  <img src="images/logo.svg" alt="">
+</article>
+  <article>
+    <h1>A history of everything you copy</h1>
+    <p> Clipboard allows you to track and organize everything you
+      copy. Instantly access your clipboard on all your devices.</p>
+    <ul>
+      <li><button class="btn-ios">Download for iOS</button></li>
+      <li><button class="btn-mac">Download for Mac</button></li>
+    </ul>
+  </article>
+</section>
+
+<section class="snipp">
+  <article>
+    <h2>Keep track of your snippets</h2>
+    <p>Clipboard instantly stores any item you copy in the cloud,
+      meaning you can access your snippets immediately on all your
+      devices. Our Mac and iOS apps will help you organize everything.</p>
+  </article>
+
+  
+  <div class="snippets">
+    <article>
+      <img src="images/image-computer.png" alt="">
+    </article>
+
+    <article>
+      <div>
+        <h3>Quick Search</h3>
+        <p>Easily search your snippets by content, category, web address, application, and more.</p>
       </div>
-    </div>
-  </header>
-  <section class="snip">
-    <div class="head">
-      <h2>Keep track of your snippets</h2>
-      <p> Clipboard instantly stores any item you copy in the cloud,
-        meaning you can access <br>your snippets immediately on all your
-        devices. Our Mac and iOS apps will help you <br>organize everything.</p>
-    </div>
-    <div class="snipp">
-      <div class="img">
-        <img src="images/image-computer.png" alt="image">
+      <div>
+        <h3>iCloud Sync</h3>
+        <p>Instantly saves and syncs snippets across all your devices.
+        </p>
       </div>
-      <ul class="info">
-        <li>
-          <h3>Quick Search</h3>
-          <p>Easily search your snippets by content, <br>category, web address, application, and more.</p>
-        </li>
-        <li>
-          <h3>iCloud Sync</h3>
-          <p>Instantly saves and syncs snippets across <br>all your devices.</p>
-        </li>
-        <li>
-          <h3>Complete History</h3>
-          <p>Retrieve any snippets from the first moment <br>you started using the app.</p>
-        </li>
-      </ul>
-    </div>
-  </section>
-  <section class="photos">
-    <div class="head">
-      <h2> Access Clipboard anywhere</h2>
-      <p>Whether you’re on the go, or at your computer, you can access all your Clipboard
-        <br>snippets in a few simple clicks.
-      </p>
-    </div>
-    <div class="img">
-      <img src="images/image-devices.png" alt="devices">
-    </div>
-  </section>
-  <section class="workflow">
-    <div class="head">
-      <h2>Supercharge your workflow</h2>
-      <p>We’ve got the tools to boost your productivity.</p>
-    </div>
-    <div class="container">
-      <div class="coulmn">
-        <img src="images/icon-blacklist.svg " alt="blacklists">
+      <div>
+        <h3>Complete History</h3>
+        <p>Retrieve any snippets from the first moment you started using the app.</p>
+      </div>
+    </article>
+  </div>
+</section>
+
+<section class="photos">
+  <article>
+    <h2>Access Clipboard anywhere</h2>
+    <p>Whether you’re on the go, or at your computer, you can access all your Clipboard
+      snippets in a few simple clicks.</p>
+    <img src="images/image-devices.png" alt="">
+  </article>
+</section>
+
+<section class="workflow">
+    <article>
+        <h2>Supercharge your workflow</h2>
+        <p>We’ve got the tools to boost your productivity.</p>
+    </article>
+
+    <div class="card">
+        <article>
+          <img src="images/icon-blacklist.svg" alt="">
         <h3>Create blacklists</h3>
         <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
-      </div>
-      <div class="coulmn">
-        <img src="images/icon-text.svg " alt="text">
+        </article>
+        <article>
+          <img src="images/icon-text.svg" alt="">
         <h3>Plain text snippets</h3>
         <p>Remove unwanted formatting from copied text for a consistent look.</p>
-      </div>
-      <div class="coulmn">
-        <img src="images/icon-preview.svg " alt="preview">
+        </article>
+        <article>
+            <img src="images/icon-preview.svg" alt="">
         <h3>Sneak preview</h3>
         <p>Quick preview of all snippets on your Clipboard for easy access.</p>
-      </div>
+        </article>
     </div>
-  </section>
-  <section class="Compaines">
-    <div class="container">
-      <img src="images/logo-google.png" alt="Google">
-      <img src="images/logo-ibm.png" alt="IBM">
-      <img src="images/logo-microsoft.png" alt="Microsoft">
-      <img src="images/logo-hp.png" alt=" HP">
-      <img src="images/logo-vector-graphics.png" alt="Vector">
-    </div>
-  </section>
-  <section class="info">
-    <div class="container">
-      <h1>Clipboard for iOS and Mac OS</h1>
-      <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud
-        and <br>you’re ready to start adding to your clipboard.
-      </p>
-      <div class="buttons">
-        <button class="down down-ios">Download for iOS</button>
-        <button class="down down-mac"> Download for Mac</button>
-      </div>
-    </div>
-  </section>
-  <footer>
-    <div class="container">
-      <img src="images/logo.svg" alt="logoo">
-      <div class="links">
-        <ul class="first">
-          <li><a href="/">FAQs</a></li>
-          <li><a href="/">Contact Us</a></li>
-        </ul>
-        <ul class="second">
-          <li><a href="/">Privacy Policy</a></li>
-          <li><a href="/">Press Kit</a></li>
-        </ul>
-        <ul class="third">
-          <li><a href="/">Install Guide</a></li>
-        </ul>
-      </div>
-      <ul class="Socialmedia">
-        <li>
-          <a href="/">
-            <img src="images/icon-facebook.svg" alt="FB">
-          </a>
-        </li>
-        <li>
-          <a href="/">
-            <img src="images/icon-twitter.svg" alt="twitter">
-          </a>
-        </li>
-        <li>
-          <a href="/">
-            <img src="images/icon-instagram.svg" alt="instagram">
-          </a>
-        </li>
-      </ul>
-    </div>
-  </footer>
-</body>
+</section>
 
+<section class="companies">
+  <ul>
+    <li><img src="images/logo-google.png" alt=""></li>
+    <li><img src="images/logo-ibm.png" alt=""></li>
+    <li><img src="images/logo-microsoft.png" alt=""></li>
+    <li><img src="images/logo-hp.png" alt=""></li>
+    <li><img src="images/logo-vector-graphics.png" alt=""></li>
+  </ul>
+</section>
+
+<section class="info">
+  <h2>Clipboard for iOS and Mac OS</h2>
+  <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+    and you’re ready to start adding to your clipboard.</p>
+  <ul>
+    <li><button class="btn-ios">Download for iOS</button></li>
+    <li><button class="btn-mac">Download for Mac</button></li>
+  </ul>
+</section>
+<div class="container">
+  <footer>
+    <article>
+      <img src="images/logo.svg" alt="">
+    </article>
+    <ul>
+      <li><button> FAQs</button></li>
+      <li><button>Contact Us</button></li>
+    </ul>
+    <ul>
+      <li><button>Privacy Policy</button></li>
+      <li><button>Press Kit</button></li>
+    </ul>
+    <ul>
+      <li><button>Install Guide</button></li>
+    </ul>
+
+    <ul class="social-media">
+      <li><img src="images/icon-facebook.svg" alt=""></li>
+      <li><img src="images/icon-twitter.svg" alt=""></li>
+      <li><img src="images/icon-instagram.svg" alt=""></li>
+    </ul>
+  </footer>
+</div>
+</body>
 </html>
